# vendor_hisilicon

./: .gitignore  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  hisignalling.c
Hi3516DV300/: config.json
Hi3516DV300/config/khdf/: hdf.hcs
Hi3516DV300/config/uhdf/: device_info.hcs  hdf.hcs  usb_pnp_device.hcs
Hi3516DV300/hals/audio/: product.gni
Hi3516DV300/hals/wlan/: product.gni
Hi3516DV300/hdf_config/khdf/: Makefile
Hi3516DV300/hdf_config/uhdf/: device_info.hcs  hdf_ecm_acm.hcs  usb_cdcacm.hcs  usb_cdcecm.hcs  usb_ecm_acm.hcs
Hi3516DV300/power_config/: power_mode_config.xml
Hi3751V350/hals/audio/: adapter_config.json  product.gni
Hi3751V350/hdf_config/khdf/: hdf.hcs
Hi3751V350/hdf_config/uhdf/: device_info.hcs
hispark_aifly_linux/: BUILD.gn  config.json  fs.yml  ohos.build
hispark_aifly_linux/dhcp_client/: BUILD.gn  dhcp_client_main.c
hispark_aifly_linux/hals/audio/: BUILD.gn  product.gni
hispark_aifly_linux/hdf_config/: Makefile
hispark_aifly_linux/hdf_config/hdf_test/: Makefile  i2c_test_config.hcs  regulator_test_config.hcs
hispark_aifly_linux/init_configs/: BUILD.gn  init_linux_openharmony.cfg
hispark_aifly_linux/init_configs/etc/: fstab
hispark_aifly_linux/init_configs/etc/init.d/: S00devs  S01mdev  S80network  S82ohos  gpio
hispark_aifly_linux/init_configs/hdc/: init_hdc
hispark_aries/: BUILD.gn  config.json  fs.yml  ohos.build
hispark_aries/config/: BUILD.gn  debug.config  hdf.hcs  release.config
hispark_aries/hdf_config/: BUILD.gn  hdf.hcs
hispark_aries/init_configs/: BUILD.gn  init_liteos_a_3518ev300.cfg  init_liteos_a_3518ev300_mksh.cfg
hispark_aries/kernel_configs/: debug.config  release.config
hispark_pegasus/: BUILD.gn  README.md  README_zh.md  config.json  ohos.build
hispark_pegasus/demo/: README.md
hispark_pegasus/demo/robot_demo/robot_car/ssd1306/: BUILD.gn  ssd1306.c  ssd1306_fonts.h
hispark_pegasus/demo/smart_night_light_demo/night_light/: BUILD.gn  night_light_demo.c  night_light_param.h  ssd1306test.c
hispark_pegasus/demo/smart_night_light_demo/night_light/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.c  ssd1306_fonts.h
hispark_pegasus/demo/smart_night_light_demo/udpserver_light/: BUILD.gn  cjson.c  demo_entry_cmsis.c  net_demo.h  udp_server_test.c  wifi_connecter.c  wifi_starter.c  wifi_starter.h
hispark_pegasus/demo/sntp_demo/src/: BUILD.gn  sntp.c  sntp_debug.c  sntp_port.c  sntp_port.h
hispark_pegasus_mini_system/: BUILD.gn  config.json
hispark_pegasus_minimal/: BUILD.gn  README.md  config.json  ohos.build
hispark_pegasus_minimal/wraps/: BUILD.gn  bss_reservation.c  huks_wrap.c
hispark_phoenix/: config.json  ohos.build  product.gni
hispark_phoenix/audio/: BUILD.gn  audio_policy_config.xml
hispark_phoenix/hals/audio/: BUILD.gn
hispark_phoenix/hals/audio/config/: audio_policy_config.xml
hispark_phoenix/power_config/: power_mode_config.xml
hispark_phoenix/preinstall-config/: BUILD.gn  install_list.json  install_list_capability.json  install_list_permissions.json  uninstall_list.json
hispark_phoenix/updater_config/: build_cfg.gni
hispark_taurus/: BUILD.gn  config.json  config.json.orig  config.json.rej  fs.yml  ohos.build
hispark_taurus/config/: debug.config  debug_tee.config  hdf.hcs  release.config  release_tee.config
hispark_taurus/hals/audio/: BUILD.gn  audio_adapter.json  audio_paths.json  product.gni
hispark_taurus/hals/security/permission_lite/: BUILD.gn
hispark_taurus/hals/security/permission_lite/ipc_auth/include/: policy_preset.h  policy_preset_product.h
hispark_taurus/hdf_config/: BUILD.gn  hdf.hcs
hispark_taurus/init_configs/: BUILD.gn  init_liteos_a_3516dv300.cfg  init_liteos_a_3516dv300_mksh.cfg
hispark_taurus/kernel_configs/: debug.config  debug_tee.config  release.config  release_tee.config
hispark_taurus_linux/: BUILD.gn  config.json  fs.yml  ohos.build
hispark_taurus_linux/audio/: BUILD.gn
hispark_taurus_linux/config/: Makefile  hdf.hcs
hispark_taurus_linux/hals/utils/token/: BUILD.gn  hal_token.c
hispark_taurus_linux/hdf_config/: Makefile  hdf.hcs
hispark_taurus_linux/init_configs/: BUILD.gn  init_linux_3516dv300_openharmony_debug.cfg  init_linux_3516dv300_openharmony_release.cfg
hispark_taurus_linux/init_configs/etc/: fstab
hispark_taurus_linux/init_configs/etc/init.d/: S01mdev  S80network  S82ohos  S84pstore
hispark_taurus_linux_ex/: BUILD.gn  config.json  fs.yml  ohos.build
hispark_taurus_linux_ex/emmc/: BOOT_ARGS_GUIDE.txt  boot_config_100M.txt  hi3516_linux_100M.xml.txt
hispark_taurus_linux_ex/hdf_config/: Makefile  hdf.hcs
hispark_taurus_linux_ex/init_configs/: init_linux_3516dv300_openharmony_debug.cfg  init_linux_3516dv300_openharmony_release.cfg
hispark_taurus_mini_system/: BUILD.gn  config.json  fs.yml  ohos.build
hispark_taurus_mini_system/hals/security/permission_lite/: BUILD.gn  hal_pms.c
hispark_taurus_mini_system/hals/security/permission_lite/ipc_auth/include/: policy_preset_product.h
hispark_taurus_mini_system/hdf_config/: BUILD.gn
hispark_taurus_mini_system/init_configs/: BUILD.gn  init_liteos_a_3516dv300.cfg  init_liteos_a_3516dv300_mksh.cfg
hispark_taurus_mini_system/kernel_configs/: debug.config  debug_tee.config  release.config  release_tee.config
hispark_taurus_standard/: BUILD.gn  config.json  ohos.build  product.gni
hispark_taurus_standard/audio/: BUILD.gn  audio_policy_config.xml
hispark_taurus_standard/hals/audio/: BUILD.gn  alsa_adapter.json  alsa_paths.json  audio_adapter.json  audio_effect.json  audio_paths.json  product.gni
hispark_taurus_standard/hals/audio/config/: audio_policy_config.xml
hispark_taurus_standard/hdf_config/uhdf/: BUILD.gn  device_info.hcs  usb_ecm_acm.hcs
hispark_taurus_standard/hdf_config/uhdf/camera/pipeline_core/: config.hcs
hispark_taurus_standard/preinstall-config/: BUILD.gn  install_list.json  install_list_capability.json  install_list_permissions.json  uninstall_list.json
watchos/: config.json  ohos.build
watchos/patchs/: hi3516dv300.patch
watchos/power_config/: power_mode_config.xml
(+736 files in other folders)
