# Copyright (c) 2025 HiSilicon (Shanghai) Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

copy("init_configs") {
  sources = [ "init_linux_openharmony.cfg" ]
  outputs = [ "$root_out_dir/etc/init.cfg" ]
}

copy("init_hdc") {
  sources = [ "hdc/init_hdc" ]
  outputs = [ "$root_out_dir/bin/init_hdc" ]
}

copy("init_initd") {
  sources = [
    "etc/init.d/S00devs",
    "etc/init.d/S01mdev",
    "etc/init.d/S80network",
    "etc/init.d/S82ohos",
    "etc/init.d/rcS",
    "etc/init.d/gpio",
  ]
  outputs = [ "$root_out_dir/etc/init.d/{{source_file_part}}" ]
}

copy("init_fstab") {
  sources = [ "etc/fstab" ]
  outputs = [ "$root_out_dir/etc/{{source_file_part}}" ]
}
