# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
    bss_reservation_size = 0
}

static_library("huksWrap") {
    sources = [
        "huks_wrap.c",
        "bss_reservation.c",
    ]

    include_dirs = [
        "./",
        "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
        "//commonlibrary/utils_lite/include",
    ]
    cflags = [ "-DCONFIG_BSS_RESERVATION_SIZE=${bss_reservation_size}" ]
}
