# Copyright (C) 2023 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

import("//build/ohos.gni")

ohos_prebuilt_etc("hdf_audio_path_json") {
  source = "audio_paths.json"

  relative_install_dir = "hdfconfig"
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "product_hispark_taurus_standard"
}

ohos_prebuilt_etc("audio_policy_config") {
  source = "config/audio_policy_config.xml"

  relative_install_dir = "audio"
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "product_hispark_taurus_standard"
}

group("hdf_audio_config") {
  deps = [
    ":audio_policy_config",
    ":hdf_audio_path_json",
  ]
}

group("hdi_service_st") {
  testonly = true
  deps = [ "//drivers/peripheral/audio/test/systemtest/hdi_service/hispark_taurus_standard:hdi_service_hardwaredependence" ]
}
