# Copyright (C) 2022 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("net_demo") {
  config_file = [ "./libudpserverstart.a" ]

  copy("config") {
    sources = config_file
    outputs = [
      "//out/hispark_pegasus/wifiiot_hispark_pegasus/libs/{{source_file_part}}",
    ]
  }

  sources = [ "udp_server_test.c" ]

  sources += [
    "cjson.c",
    "demo_entry_cmsis.c",
    "wifi_connecter.c",
    "wifi_starter.c",
  ]
  include_dirs = [
    "../night_light",
    "//commonlibrary/utils_lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    "//third_party/cJSON",
  ]
}
