# Copyright (C) 2022 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("sntp") {
  sources = [
    "sntp.c",
    "sntp_debug.c",
    "sntp_port.c",
  ]

  defines = [
    # "SNTP_SERVER_DNS=1",
    "LWIP_HAVE_INT64=0",
    "LWIP_DEBUG",
    "SNTP_DEBUG=0xA0",
    "LWIP_DBG_TYPES_ON=LWIP_DBG_ON",
  ]

  include_dirs = [
    "../include",
    "../include/lwip/apps",
    "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
  ]
}
