#
# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
import("//build/lite/config/component/lite_component.gni")

shared_library("hal_pms") {
  sources = [ "hal_pms.c" ]
  cflags = [ "-Wall" ]
  include_dirs = [
    "//base/security/permission/services/permission_lite/pms/include/hals",
    "//base/security/permission/services/permission_lite/pms/include",
    "//base/security/permission/interfaces/kits/permission_lite",
    "//base/hiviewdfx/interfaces/kits/hilog",
    "//base/startup/syspara_lite/interfaces/kits",
    "//drivers/framework/include/platform",
    "//drivers/framework/include/core",
    "//drivers/framework/include/osal",
    "//drivers/adapter/uhdf/posix/include",
    "//drivers/framework/include/utils",
    "//drivers/framework/include/config",
    "//drivers/framework/include",
    "//third_party/bounds_checking_function/include/",
  ]
  deps = [
    "//base/startup/syspara_lite/frameworks/parameter:parameter",
    "//drivers/adapter/uhdf/platform:hdf_platform",
    "//third_party/bounds_checking_function:libsec_shared",
    "//third_party/mbedtls:mbedtls_shared",
  ]
}
