#
# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
import("//build/lite/config/component/lite_component.gni")

shared_library("haltoken_shared") {
  sources = [ "hal_token.c" ]
  cflags = [ "-Wall" ]
  include_dirs = [
    "//base/startup/init/interfaces/hals",
    "//commonlibrary/utils_lite/include",
  ]
  include_dirs += [
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits",
    "//third_party/bounds_checking_function/include/",
    "//test/xts/device_attest_lite/services/core/include/utils",
  ]
  deps = []
}
