#
# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
import("//build/lite/config/component/lite_component.gni")

shared_library("hal_pms") {
  sources = [ "hal_pms.c" ]
  cflags = [ "-Wall" ]
  include_dirs = [
    "//base/security/permission_lite/services/pms/include/hals",
    "//base/security/permission_lite/services/pms/include",
    "//base/security/permission_lite/interfaces/kits",
    "//base/hiviewdfx/interfaces/kits/hilog",
    "//base/startup/init/interfaces/innerkits/include/syspara",
    "//drivers/hdf_core/framework/include/platform",
    "//drivers/hdf_core/framework/include/core",
    "//drivers/hdf_core/framework/include/osal",
    "//drivers/hdf_core/adapter/uhdf/posix/include",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/framework/include/config",
    "//drivers/hdf_core/framework/include",
    "//third_party/bounds_checking_function/include/",
  ]
  deps = [
    "//base/startup/init/interfaces/innerkits:libbegetutil",
    "//drivers/hdf_core/adapter/uhdf/platform:hdf_platform",
    "//third_party/bounds_checking_function:libsec_shared",
    "//third_party/mbedtls:mbedtls_shared",
  ]
}
